
    o	Special names such as "dim", "names", etc, are now allowed as slot
	names of S4 classes, with "class" the only remaining exception.

    o	.Renviron.site can have architecture-specific versions such as
	.Renviron.i386 on systems with sub-architectures.


DEPRECATED & DEFUNCT

    o	Supplying the parser with a string containing both octal/hex and
	Unicode escapes is now an error.


PACKAGE INSTALLATION

    o	install.packages() has a new argument 'libs_only' to optionally
	pass --libs-only to INSTALL and works analogously for Windows
	binary installs (to add support for 64- or 32-bit Windows).

    o	When sub-architectures are in use, the installed architectures
	are recorded in the 'Archs' field of the DESCRIPTION file.
	There is a new default filter, "subarch", in
	available.packages() to make use of this.

	Code is compiled in a copy of the 'src' directory when a
	package is installed for more than one sub-architecture: this
	avoid problems with cleaning the sources between building
	sub-architectures.

    o	R CMD INSTALL --libs-only no longer overrides the setting of
	locking, so a previous version of the package will be restored
	unless --no-lock is specified.


C-LEVEL FACILITIES

    o	lang5() and lang6() {in addition to pre-existing lang[1-4]()}
	convenience functions for easier construction of eval() calls.
	If you have your own definition, do wrap it inside
	'#ifndef lang5 .... #endif' to keep it working with old and new R.

    o	Header R.h now includes only the C headers it itself needs,
	hence no longer includes errno.h.  (This helps avoid problems
	when it is included from C++ source files.)

    o	Headers Rinternals.h and R_ext/Print.h include the C++
	versions of stdio.h and stdarg.h respectively if included from
	a C++ source file.


INSTALLATION

    o	A C99 compiler is now required, and more C99 language features
	will be used in the R sources.

    o	Tcl/Tk >= 8.4 is now required (increased from 8.3).
