@@ -656,8 +656,8 @@ platforms} with associated extensions @file{.c}, @file{.cc} or
 @file{.mm} or @file{.M}, respectively.  We recommend using @file{.h} for
 headers, also for C++@footnote{Using @file{.hpp}, although somewhat
 popular, is not guaranteed to be portable.} or Fortran 9x include files.
-(Use of @file{.C} for C++ is now deprecated and will be removed in @R{}
-2.12.0.)
+(Use of @file{.C} for C++ is now defunct.)
+
 
 It is not portable (and may not be possible at all) to mix all these
 languages in a single package, and we do not support using both C++ and
